--- a/app/styles/base/_typography.scss
+++ b/app/styles/base/_typography.scss
@@ -1,6 +1,5 @@
 $primary-font: 'Roboto', sans-serif;
-$secondary-font: 'Cormorant Garamond', serif;
-$tertiary-font: 'Cinzel Decorative';
+$secondary-font: 'Gruppo', sans-serif;
 
 $font-size-mobile: 0.8rem;
 $font-size-mobile-wide: 1rem;
@@ -12,6 +11,8 @@ $font-size-desktop-ultra-ultra-wide: 3.052rem;
 $font-size-desktop-ultra-ultra-ultra-wide: 3.815rem;
 $font-size-desktop-ultra-ultra-ultra-ultra-wide: 4.768rem;
 
+// Font sizes Heading 
+$font-size-xxx-small: 0.6rem;
 $font-size-xx-small: 0.8rem;
 $font-size-x-small: 1rem;
 $font-size-small: 1.25rem;
@@ -21,3 +22,5 @@ $font-size-x-large: 2.441rem;
 $font-size-xx-large: 3.052rem;
 $font-size-xxx-large: 3.815rem;
 $font-size-xxxx-large: 4.768rem;
+$font-size-xxxxx-large: 5.96rem;
+$font-size-xxxxxx-large: 7.451rem;
