--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -8,17 +8,10 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  padding: 6rem 0;
-  min-height: 100vh;
   width: 100%;
   max-width: 1440px;
-  margin: 0 auto;
-  height: 100dvh;
-
-  h1 {
-    font-size: 3rem;
-    font-weight: 700;
-    margin-bottom: 2rem;
-    text-align: center;
-  }
+  border: 2px solid $quinary-color;
+  padding: 5rem 1rem 2rem 1rem;
+  position: relative;
+  background-color: $denary-color;
 }
