--- a/app/styles/base/_typography.scss
+++ b/app/styles/base/_typography.scss
@@ -1,5 +1,8 @@
-$primary-font: 'Roboto', sans-serif;
-$secondary-font: 'Gruppo', sans-serif;
+$primary-font: 'Geistsans', sans-serif;
+$secondary-font: 'Geistmono', monospace;
+$tertiary-font: 'Roboto', sans-serif;
+$quaternary-font: 'Roboto Mono', monospace;
+$quinary-font: 'Gruppo', sans-serif;
 
 $font-size-mobile: 0.8rem;
 $font-size-mobile-wide: 1rem;
