--- a/app/components/Navbar/Hero.module.scss
+++ b/app/components/Navbar/Hero.module.scss
@@ -7,19 +7,46 @@
     width: 100%;
     max-width: 1440px;
     margin: 0 auto;
+    margin-top: 1.5rem;
+    background-color: $denary-color;
+    // border: 2px solid $quinary-color;
+    border-radius: 1rem;
+    padding: 0;
+    transition: all 0.5s ease-in-out;
+}
 
-    .hero-image {
+.hero-main:focus,
+.hero-main:hover {
+    box-shadow: $octonary-color 0px 0px 10px 0px;
+    transition: all 0.5s ease-in-out;
+    border: none;
+}
+
+
+// box-shadow: $octonary-color 0px 0px 10px 0px;
+
+.hero-image {
+    width: 100%;
+    height: auto;
+    animation: fade-in-center 3s ease-in-out;
+    transition: all 0.5s ease-in-out;
+
+
+    img {
         width: 100%;
         height: auto;
-        animation: fade-in-center 2s ease-in-out;
+        padding: 0 0 1rem 0;
+        filter: brightness(0.6);
+        transition: all 0.5s ease-in-out;
+    }
 
-        img {
-            width: 100%;
-            height: auto;
-            padding: 3rem 0;
-        }
+    img:focus,
+    img:hover {
+        filter: brightness(1.1);
+        transition: all 0.5s ease-in-out;
     }
 }
+
 
 .container {
     width: 100%;
@@ -29,6 +56,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-top: 2rem;
 }
 
 .hero-title-container {
@@ -56,7 +84,7 @@
 
 .hero-text-container {
     width: 100%;
-    padding: 0 0.5rem;
+    // padding: 0 0.5rem;
 
     button {
         padding: 1rem 1.3rem;
@@ -98,6 +126,30 @@
     padding: 0 1.5rem;
 }
 
+@keyframes image-rotate {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+@keyframes image-flip {
+    0% {
+        transform: scaleY(1);
+    }
+
+    50% {
+        transform: scaleY(-1);
+    }
+
+    100% {
+        transform: scaleY(1);
+    }
+}
+
 @keyframes fade-in-center {
     from {
         opacity: 0;
@@ -113,7 +165,7 @@
 @keyframes fade-in-left {
     0% {
         opacity: 0;
-        transform: translateX(-100%);
+        transform: translateX(-80%);
     }
 
     100% {
@@ -125,7 +177,7 @@
 @keyframes fade-in-right {
     0% {
         opacity: 0;
-        transform: translateX(100%);
+        transform: translateX(80%);
     }
 
     100% {
@@ -143,6 +195,7 @@
         width: 100%;
         border-radius: 1rem;
         padding: 0;
+        margin-top: 2rem;
     }
 
     .hero-text-wrapper {
@@ -178,8 +231,6 @@
             padding: 0;
         }
     }
-
-
 
     .hero-btn-container {
         padding: 0;
@@ -236,6 +287,12 @@
 }
 
 @include respond(xl) {
+    .hero-main {
+        width: 100%;
+        border-radius: 1rem;
+        padding: 1rem;
+    }
+
     .hero-title-container {
         width: 50%;
 
@@ -249,11 +306,18 @@
 }
 
 @include respond(2xl) {
+    .hero-main {
+        width: 100%;
+        border-radius: 1rem;
+        padding: 1rem;
+        margin-top: 2rem;
+    }
+
     .hero-title-container {
         width: 50%;
 
         h1 {
-            font-size: clamp($font-size-desktop-ultra-ultra-ultra-wide, 15vw, $font-size-desktop-ultra-ultra-ultra-wide);
+            font-size: clamp($font-size-desktop-ultra-ultra-wide, 15vw, $font-size-desktop-ultra-ultra-ultra-wide);
             line-height: 1.5;
         }
     }
