--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -10,8 +10,8 @@
   align-items: center;
   width: 100%;
   max-width: 1440px;
-  border: 2px solid $quinary-color;
   padding: 5rem 1rem 2rem 1rem;
   position: relative;
-  background-color: $denary-color;
+  // background-color: $denary-color;
+  // border: 2px solid $quinary-color;
 }
