--- a/app/globals.scss
+++ b/app/globals.scss
@@ -12,7 +12,7 @@
 
 /* Other global styles */
 :root {
-  background-color: $primary-color;
+  background-color: $denary-color;
   color: $secondary-text-color;
   margin: 0 auto;
   width: 100%;
