--- a/app/styles/base/_variables.scss
+++ b/app/styles/base/_variables.scss
@@ -25,6 +25,14 @@ $tertiary-accent-color: #015668;
 $quaternary-accent-color: #193C50;
 $quinary-accent-color: #232D3F;
 
+//Color palette 2
+
+$primary-color-palette: #222831;
+$secondary-color-palette: #393E46;
+$tertiary-color-palette: #00ADB5;
+$quaternary-color-palette: #00FFF5;
+$quinary-color-palette: #EEEEEE;
+
 
 // Utility colors
 
