--- a/app/components/Navbar/Navbar.module.scss
+++ b/app/components/Navbar/Navbar.module.scss
@@ -26,6 +26,7 @@
 
 .navbar-button-container {
     box-sizing: border-box;
+    padding: 0;
 
     button {
         background-color: $quaternary-accent-color;
@@ -105,7 +106,7 @@
     }
 
     .logo {
-        width: 50%;
+        width: 35%;
         height: auto;
         margin: 0 auto;
         display: flex;
@@ -127,16 +128,16 @@
             letter-spacing: 0.4rem;
             cursor: pointer;
         }
+
+        img {
+            width: 100%;
+            max-width: 130px;
+            height: auto;
+            max-height: 40px;
+        }
     }
 
-    svg {
-        width: 1.5em;
-        height: 1.5em;
-        fill: $primary-color;
-        transition: all 0.3s ease-in-out;
-        padding: 0;
-        margin-top: 3px;
-    }
+
 
     .hamburger-container {
         display: flex;
@@ -152,6 +153,14 @@
         margin-right: 10px;
         box-shadow: 0 0.4em 0.5em rgba(228, 225, 225, 0.1);
 
+        svg {
+            width: 1.5em;
+            height: 1.5em;
+            fill: $primary-color;
+            transition: all 0.3s ease-in-out;
+            padding: 0;
+            margin-top: 3px;
+        }
     }
 
     .burgerMenuButton {
@@ -307,7 +316,11 @@
         z-index: 1000;
         max-width: 1980px;
         padding: 0rem;
-        height: 90px;
+        height: 100px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
     }
 
     .navbar-button-container {
@@ -340,7 +353,7 @@
         margin: 0 auto;
         box-sizing: border-box;
         border-radius: 0.5em;
-        margin-top: 1rem;
+        // margin-top: 1rem;
     }
 
     .navbar-links {
@@ -352,21 +365,6 @@
         flex-direction: row;
         justify-content: space-between;
         padding: 0 1.5rem;
-
-        .logo {
-            width: 280px;
-            height: auto;
-            font-size: $font-size-desktop-wide;
-            font-family: $secondary-font;
-            font-weight: 100;
-
-            a {
-                font-size: $font-size-desktop-ultra-ultra-wide;
-                color: $secondary-color;
-                font-family: $secondary-font;
-                cursor: pointer;
-            }
-        }
     }
 
     .navLinks {
