--- a/app/components/Gallery/Gallery.module.scss
+++ b/app/components/Gallery/Gallery.module.scss
@@ -4,69 +4,197 @@
 @use './app/styles/utils/_functions' as *;
 
 .gallery-main {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
     width: 100%;
     max-width: 1440px;
-    padding: 2rem 0 2rem 0;
-    position: relative;
+    padding: 0;
     background-color: $denary-color;
-    border: 2px solid $quinary-color;
+    // border: 2px solid $quinary-color;
     border-radius: 1rem;
-}
-
-.gallery-title-container {
-    h1 {
-        font-size: clamp($font-size-desktop-ultra-wide, 10vw, $font-size-desktop-ultra-ultra-wide);
-        font-weight: 400;
-        color: $primary-text-color;
-        text-align: center;
-        margin-bottom: 2rem;
-        font-family: $tertiary-font;
-    }
-}
-
-.gallery-image-container {
+    width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    max-width: 1100px;
     margin: 0 auto;
-    margin-top: 1em;
-    border-radius: 0.5rem;
-    gap: 2em;
-    overflow-x: auto;
-    margin-bottom: 0.5rem;
+    max-height: 100%;
+
+    ::-webkit-scrollbar {
+        background-color: $nonary-color;
+        width: 100%;
+        height: 0.7rem;
+        border-radius: 5px;
+    }
+
+    /* Track */
+    ::-webkit-scrollbar-track {
+        background: darken($color: $quaternary-color, $amount: 10%);
+        border-radius: 1rem;
+    }
+
+    /* Handle */
+    ::-webkit-scrollbar-thumb {
+        background: $quinary-color;
+        border-radius: 1em;
+    }
+
+    /* Handle on hover */
+    ::-webkit-scrollbar-thumb:hover {
+        background: $quinary-color;
+    }
 }
 
+.gallery-title-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem 0;
+    animation: animate_images 10s linear infinite;
+    animation-play-state: running;
+    align-content: center;
+    gap: 2rem;
+    background-color: $nonary-color;
+    height: 100%;
+    margin: 1rem 0;
+    width: auto;
 
 
-.gallery-image-wrapper {
-    width: 400px;
-    height: auto;
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    border-radius: 0.5rem;
+    &:hover,
+    &:focus,
+    &:active {
+        animation-play-state: paused;
+    }
+
+    h1 {
+        font-size: clamp($font-size-tablet, 10vw, $font-size-desktop);
+        font-weight: 400;
+        color: $primary-text-color;
+        text-align: center;
+        margin: 0 1rem;
+        font-family: $tertiary-font;
+        color: linear-gradient(90deg, $tertiary-color-palette, $quaternary-color-palette);
+        text-wrap: nowrap;
+        padding: 1rem;
+    }
+}
+
+.gallery-image-container {
     display: grid;
     grid-auto-flow: column;
     grid-auto-columns: 100%;
-    gap: 3rem;
-    overflow-y: scroll;
+    align-items: center;
+    overflow-x: auto;
     overscroll-behavior-inline: contain;
     scroll-snap-align: center;
     scroll-snap-type: inline mandatory;
-    -webkit-overflow-scrolling: touch;
+    // scroll-padding-inline: 1rem;
+    width: 100%;
+    max-width: 1440px;
+    border-radius: 0.5rem;
+    opacity: 1;
+    gap: 2rem;
+    box-sizing: border-box;
+    padding-bottom: 2rem;
+
+}
+
+.gallery-image-wrapper {
+    scroll-padding-inline: 1rem;
+    scroll-snap-align: center;
+    overscroll-behavior-inline: contain;
+    width: 100%;
+    padding: 0.5rem;
+    border-radius: 1rem;
+
 
     img {
+
         width: 100%;
-        max-width: 1440px;
-        height: auto;
-        scroll-snap-align: start;
+        height: 400px;
+        border-radius: 1rem;
+        box-shadow: $tertiary-color-palette 0px 0px 10px 0px;
+        transition: all 0.5s ease-in-out;
+    }
+
+
+    &:hover,
+    &:focus,
+    &:active {
+        animation-play-state: paused;
+    }
+}
+
+.gallery-button-container {
+    width: 100%;
+    display: inline-block;
+    text-align: center;
+    margin: 2rem 0;
+
+    button {
+        padding: 1rem 1.3rem;
+        border: none;
+        border-radius: 2rem;
+        background-color: $octonary-color;
+        color: $secondary-text-color;
+        font-size: clamp($font-size-mobile, 1.5vw, $font-size-mobile-wide);
+        font-weight: 400;
+        letter-spacing: 0.05rem;
+        transition: all 0.3s ease-in-out;
+        cursor: pointer;
+        gap: 0.5rem;
+        font-family: $secondary-font;
+
+        &:hover {
+            background-color: $nonary-color;
+            color: $primary-text-color;
+        }
+    }
+}
+
+@keyframes animate_images {
+    from {
+        // transform: translate3d(0, 0, 0);
+        transform: translateX(0);
+    }
+
+    to {
+        // transform: translate3d(-100%, 0, 0);
+        transform: translateX(-100%);
+    }
+}
+
+@include respond(md) {
+
+    .gallery-title-container {
+        h1 {
+            font-size: clamp($font-size-desktop-ultra-ultra-wide, 10vw, $font-size-desktop-ultra-ultra-ultra-wide);
+            font-weight: 400;
+            color: linear-gradient(90deg, $tertiary-color-palette, $quaternary-color-palette);
+            text-align: center;
+            margin-bottom: 1rem;
+            font-family: $tertiary-font;
+        }
+    }
+
+    .gallery-image-container {
+        grid-auto-flow: column;
+        grid-auto-columns: 30%;
+        gap: 3.5rem;
+    }
+
+    .gallery-image-wrapper {
+        scroll-padding-inline: 1rem;
+        scroll-snap-align: center;
         overscroll-behavior-inline: contain;
+        width: 100%;
+        padding: 0.5rem;
+
+        img {
+
+            width: 400px;
+            height: 400px;
+            border-radius: 0.5rem;
+            box-shadow: $tertiary-color-palette 0px 0px 10px 0px;
+        }
     }
 }
