--- a/app/components/Navbar/Hero.module.scss
+++ b/app/components/Navbar/Hero.module.scss
@@ -69,7 +69,7 @@
     h1 {
         font-weight: 700;
         text-align: center;
-        font-size: clamp($font-size-desktop-ultra-wide, 10vw, $font-size-desktop-ultra-wide);
+        font-size: clamp($font-size-desktop-wide, 10vw, $font-size-desktop-ultra-wide);
         letter-spacing: 0.03rem;
         font-weight: 400;
         margin-bottom: 1.5rem;
@@ -128,6 +128,7 @@
     width: 100%;
     margin-top: 2rem;
     padding: 0 1rem 0 1rem;
+    animation: fade-in-right 3s ease-in-out;
 }
 
 @keyframes image-rotate {
@@ -255,7 +256,7 @@
 
     .hero-btn-container {
         padding: 0;
-        margin-top: 3rem;
+        margin: 3rem 0 0 1rem;
     }
 }
 
@@ -273,7 +274,7 @@
         justify-content: flex-start;
         align-items: flex-start;
         gap: 1rem;
-        padding: 0 3.5rem;
+        padding: 0 1.5rem;
         margin-top: 2rem;
     }
 
@@ -327,7 +328,7 @@
     }
 
     .hero-btn-container {
-        margin: 5rem 0 0 0;
+        margin: 1.5rem 0 2rem 0;
     }
 
 }
