--- a/app/components/Gallery/Gallery.module.scss
+++ b/app/components/Gallery/Gallery.module.scss
@@ -154,7 +154,7 @@
 @keyframes animate_images {
     from {
         // transform: translate3d(0, 0, 0);
-        transform: translateX(0);
+        transform: translateX();
     }
 
     to {
