--- a/app/components/Navbar/Navbar.module.scss
+++ b/app/components/Navbar/Navbar.module.scss
@@ -106,14 +106,14 @@
     }
 
     .logo {
-        width: 35%;
+        flex-basis: 70%;
         height: auto;
-        margin: 0 auto;
         display: flex;
         flex-direction: column;
-        justify-content: center;
+        justify-content: flex-start;
+        align-items: flex-start;
         font-family: $secondary-font;
-        margin-top: 0;
+        margin: 0;
 
         a {
             cursor: pointer;
@@ -131,9 +131,9 @@
 
         img {
             width: 100%;
-            max-width: 130px;
+            max-width: 1500px;
             height: auto;
-            max-height: 40px;
+            max-height: 70px;
         }
     }
 
@@ -150,7 +150,7 @@
         background-color: $quaternary-accent-color;
         border-radius: 50%;
         align-items: center;
-        margin-right: 10px;
+        // margin-right: 10px;
         box-shadow: 0 0.4em 0.5em rgba(228, 225, 225, 0.1);
 
         svg {
@@ -196,7 +196,7 @@
         letter-spacing: 0.05em;
         color: $secondary-color;
         box-sizing: border-box;
-        animation: fade-in-top 1s ease-in-out;
+        animation: fade-in-right 3s ease-out;
 
         li {
             font-size: clamp($font-size-tablet, 1vw, $font-size-desktop-wide);
@@ -207,15 +207,17 @@
 
         }
 
-        @keyframes fade-in-top {
+        @keyframes fade-in--right {
             from {
                 opacity: 0;
-                transform: translateY(-20%);
+                transform: translate(3rem, 0);
+                transition: all 0.3s ease-in-out;
             }
 
             to {
                 opacity: 1;
-                transform: translateY(0);
+                transform: translate(0, 0);
+                transition: all 0.3s ease-in-out;
             }
         }
 
@@ -234,7 +236,7 @@
             right: 0;
             justify-content: space-evenly;
             align-items: center;
-            margin-top: 5.7rem;
+            margin-top: 6.5rem;
             border-radius: 0.5em;
             padding-left: 1em;
             padding-right: 1em;
