--- a/app/components/Navbar/Navbar.module.scss
+++ b/app/components/Navbar/Navbar.module.scss
@@ -88,21 +88,20 @@
     max-width: 1100px;
     margin: 0 auto;
     padding: 0 1rem;
-    animation: fade-in 1.5s ease-in-out;
+    animation: fade-in-top 1.5s ease-in-out;
     translate: all 0.3s ease-in-out;
     position: relative;
 
-    @keyframes fade-in {
+    @keyframes fade-in-top {
         from {
             opacity: 0;
-            transform: translate(0, -3rem);
+            transform: translateY(-20%);
         }
 
         to {
             opacity: 1;
-            transform: translate(0, 0);
+            transform: translateY(0);
         }
-
     }
 
     .logo {
@@ -131,7 +130,7 @@
 
         img {
             width: 100%;
-            max-width: 1500px;
+            max-width: 150px;
             height: auto;
             max-height: 70px;
         }
@@ -147,15 +146,15 @@
         cursor: pointer;
         width: 3.5em;
         height: 3.5em;
-        background-color: $quaternary-accent-color;
+        // background-color: $quaternary-accent-color;
         border-radius: 50%;
         align-items: center;
         // margin-right: 10px;
-        box-shadow: 0 0.4em 0.5em rgba(228, 225, 225, 0.1);
+        // box-shadow: 0 0.4em 0.5em rgba(228, 225, 225, 0.1);
 
         svg {
-            width: 1.5em;
-            height: 1.5em;
+            width: 2rem;
+            height: 2rem;
             fill: $primary-color;
             transition: all 0.3s ease-in-out;
             padding: 0;
@@ -196,28 +195,27 @@
         letter-spacing: 0.05em;
         color: $secondary-color;
         box-sizing: border-box;
-        animation: fade-in-right 3s ease-out;
+        animation: fade-in-right 0.3s ease-in-out;
+        transition: all 0.3s ease-in-out;
 
         li {
             font-size: clamp($font-size-tablet, 1vw, $font-size-desktop-wide);
             padding-bottom: 0.5em;
-            animation: fade-in-top 3.5s forwards;
+            // animation: fade-in-top 3.5s forwards;
             border-bottom: 1px solid $secondary-color;
 
 
         }
 
-        @keyframes fade-in--right {
+        @keyframes fade-in-right {
             from {
                 opacity: 0;
-                transform: translate(3rem, 0);
-                transition: all 0.3s ease-in-out;
+                transform: translateX(20%);
             }
 
             to {
                 opacity: 1;
-                transform: translate(0, 0);
-                transition: all 0.3s ease-in-out;
+                transform: translateX(0);
             }
         }
 
@@ -236,7 +234,7 @@
             right: 0;
             justify-content: space-evenly;
             align-items: center;
-            margin-top: 6.5rem;
+            margin-top: 5.5rem;
             border-radius: 0.5em;
             padding-left: 1em;
             padding-right: 1em;
