--- a/app/components/Gallery/Gallery.module.scss
+++ b/app/components/Gallery/Gallery.module.scss
@@ -49,14 +49,15 @@
     justify-content: center;
     align-items: center;
     padding: 1rem 0;
-    animation: animate_images 10s linear infinite;
+    animation: animate_images 20s linear infinite;
     animation-play-state: running;
     align-content: center;
     gap: 2rem;
-    background-color: $nonary-color;
+    // background-color: $nonary-color;
     height: 100%;
-    margin: 1rem 0;
+    // margin: 1rem 0;
     width: auto;
+    border-radius: 1rem;
 
 
     &:hover,
@@ -66,15 +67,16 @@
     }
 
     h1 {
-        font-size: clamp($font-size-tablet, 10vw, $font-size-desktop);
+        font-size: clamp($font-size-mobile-wide, 5vw, $font-size-tablet);
         font-weight: 400;
         color: $primary-text-color;
         text-align: center;
-        margin: 0 1rem;
+        // margin: 0 1rem;
         font-family: $tertiary-font;
         color: linear-gradient(90deg, $tertiary-color-palette, $quaternary-color-palette);
         text-wrap: nowrap;
         padding: 1rem;
+        text-transform: uppercase;
     }
 }
 
@@ -154,7 +156,7 @@
 @keyframes animate_images {
     from {
         // transform: translate3d(0, 0, 0);
-        transform: translateX();
+        transform: translateX(100%);
     }
 
     to {
@@ -167,11 +169,11 @@
 
     .gallery-title-container {
         h1 {
-            font-size: clamp($font-size-desktop-ultra-ultra-wide, 10vw, $font-size-desktop-ultra-ultra-ultra-wide);
+            font-size: clamp($font-size-desktop, 2vw, $font-size-desktop-wide);
             font-weight: 400;
             color: linear-gradient(90deg, $tertiary-color-palette, $quaternary-color-palette);
             text-align: center;
-            margin-bottom: 1rem;
+            // margin-bottom: 1rem;
             font-family: $tertiary-font;
         }
     }
@@ -180,6 +182,7 @@
         grid-auto-flow: column;
         grid-auto-columns: 30%;
         gap: 3.5rem;
+        margin-top: 2rem;
     }
 
     .gallery-image-wrapper {
